--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
+    "dev": "nodemon --inspect index.js",
     "test": "echo \\\\\\\"Error: no test specified\\\\\\\" && exit 1",
     "build:ui": "rm -rf build && cd ../fullStackOpen/part2/thephonebook/ && npm run build && cp -r ./build ../../../fullStackOpen-phoneBookBackend",
     "deploy": "git push heroku main",
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/AdaWang33/fullStackOpen-phoneBookBackend#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.17.3",
     "mongoose": "^6.3.0",
     "morgan": "^1.10.0"
